musica (2.17) unreleased; urgency=low

  [ Serge Hallyn ]
  * debian/cron.hourly: add -L to find options to support symlinks under
    /usr/share/music/musica.

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 28 Jul 2011 20:23:17 -0500

musica (2.16-0ubuntu1) oneiric; urgency=low

  * debian/cron.hourly, index.php: LP: #622294
    - VASTLY improve album and song search performance by using the cache
      files listing songs/albums
    - artist lookup is still fast enough doing the dir work, though could
      be changed too, easily
    - improve the cronjob that generates these to the correct format
  * index.php:
    - improve random artist/album/song support
    - drop the ratings support; don't really have a good, persistent place
      to store this
  * debian/cron.hourly, index.php:
    - fix image loading
    - improve performance
    - cache image list too
  * index.php:
    - fix popout, move control icons to top of song window

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 28 Jul 2011 20:23:14 -0500

musica (2.15-0ubuntu1) natty; urgency=low

  [ Jeff Lane ]
  * README: fix path, LP: #733659

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 Mar 2011 05:55:51 +0000

musica (2.14-0ubuntu1) natty; urgency=low

  * debian/links, index.php, jplayer.php: rename "icons" directory to "silk",
    gives some credit to the silk project and some apache2 deployments
    include an alias for the "icons" directory which breaks musica's
    icons; "silk" should be less commonly used as an alias

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Feb 2011 09:36:14 -0800

musica (2.13-0ubuntu1) natty; urgency=low

  * index.php:
    - fix popout icon reference
    - rtrim whitespace on stats
  * index.php, jplayer.php:
    - fix download of ogg files (streaming of ogg not working yet)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 04 Jan 2011 21:17:05 -0600

musica (2.12-0ubuntu1) natty; urgency=low

  * debian/control, debian/dirs, debian/links, debian/rules,