@@ -18,8 +18,9 @@ if (isset($_REQUEST["popout"])) {
 }
 ?>
 
-<!-- local copy of http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
+<!-- local copy of jquery.min.js is currently broken (1.6.2) -->
+<!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.jplayer.js"></script>
 <script type="text/javascript">
 <!--
